@@ -5,7 +5,7 @@ OBJECTS_DIR = ../build/obj
 MOC_DIR = ../build/moc
 DEPENDPATH += . include src
 INCLUDEPATH += . include
-VERSION=0.3.2svn
+include (../global.pri)
 CONFIG += qt staticlib debug
 # Input
 HEADERS += include/qsmf.h \
